--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 # Dependencies
 node_modules/
-*/node_modules/
-
-# Production builds
-build/
-dist/
+package-lock.json
+yarn.lock
 
 # Environment variables
 .env
@@ -13,95 +10,58 @@ dist/
 .env.test.local
 .env.production.local
 
+# Production build
+client/build/
+dist/
+
 # Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
-# OS generated files
+# OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# IDE files
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
+
+# Testing
+coverage/
+.nyc_output/
 
 # Temporary files
-*.tmp
-*.temp
+tmp/
+temp/
+uploads/
 
 # Database
 *.sqlite
-*.db
+*.sqlite3
 
-# Uploads
-uploads/
-temp/
+# AWS
+.aws/
+
+# Certificates
+*.pem
+*.key
+*.crt
+
+# Python (if using any Python scripts)
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+venv/
+
+# Backup files
+*.backup
+*.bak
+
+# Generated PDFs (during development)
+generated-pdfs/
