--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,21 @@
 {
   "name": "roofing-proposal-client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.21.1",
+    "axios": "^1.6.5",
+    "lucide-react": "^0.303.0",
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.10.3",
+    "date-fns": "^3.0.6",
+    "react-pdf": "^7.6.0",
+    "zustand": "^4.4.7",
+    "react-hook-form": "^7.48.2",
+    "@tanstack/react-query": "^5.17.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,10 +23,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "react-scripts": "5.0.1",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18"
+  },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -35,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
