--- a/server/package.json
+++ b/server/package.json
@@ -1,34 +1,31 @@
 {
   "name": "roofing-proposal-server",
   "version": "1.0.0",
-  "description": "Backend server for roofing proposal application",
-  "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest"
+    "migrate": "node database/migrate.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.0.0",
-    "pg": "^8.8.0",
-    "puppeteer": "^19.0.0"
+    "openai": "^4.24.1",
+    "puppeteer": "^21.7.0",
+    "aws-sdk": "^2.1528.0",
+    "compression": "^1.7.4",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "winston": "^3.11.0",
+    "joi": "^17.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "jest": "^29.0.0"
-  },
-  "keywords": [
-    "roofing",
-    "proposal",
-    "api",
-    "express"
-  ],
-  "author": "",
-  "license": "ISC"
+    "nodemon": "^3.0.2"
+  }
 }
