--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "migrate": "node database/migrate.js"
+    "migrate": "node src/utils/runMigrations.js up",
+    "migrate:rollback": "node src/utils/runMigrations.js down"
   },
   "dependencies": {
     "express": "^4.18.2",
