--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "server:dev": "cd server && npm run dev",
     "client:dev": "cd client && npm start",
     "install:all": "npm install && cd server && npm install && cd ../client && npm install",
-    "build": "cd client && npm run build",
+    "build": "npm run install:all && cd client && npm run build",
     "start": "cd server && npm start",
-    "migrate": "cd server && npm run migrate"
+    "migrate": "cd server && npm run migrate",
+    "postinstall": "npm run install:all"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
