--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "server:dev": "cd server && npm run dev",
     "client:dev": "cd client && npm start",
-    "install:all": "npm install && cd server && npm install && cd ../client && npm install",
+    "install:all": "cd server && npm install && cd ../client && npm install",
     "build": "npm run install:all && cd client && npm run build",
     "start": "cd server && npm start",
-    "migrate": "cd server && npm run migrate",
-    "postinstall": "npm run install:all"
+    "migrate": "cd server && npm run migrate"
   },
-  "devDependencies": {
+  "dependencies": {
     "concurrently": "^8.2.2"
   },
   "engines": {
