--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,7 +9,7 @@ cmds = [
 ]
 
 [phases.build]
-cmds = ['cd client && npm run build']
+cmds = ['cd client && CI=false npm run build']
 
 [start]
 cmd = 'cd server && npm start'
