--- a/server/package.json
+++ b/server/package.json
@@ -16,15 +16,9 @@
     "sequelize": "^6.35.2",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "openai": "^4.24.1",
-    "puppeteer": "^21.7.0",
-    "aws-sdk": "^2.1528.0",
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "winston": "^3.11.0",
-    "joi": "^17.11.0"
+    "openai": "^4.24.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
