--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,4 +11,4 @@ cmds = [
 cmds = ['cd client && npm run build']
 
 [start]
-cmd = 'cd server && npm start'
+cmd = 'cd server && PORT=$PORT npm start'
