--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
-    "openai": "^4.24.1"
+    "openai": "^4.24.1",
+    "@anthropic-ai/sdk": "^0.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
