--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
     "openai": "^4.24.1",
-    "@anthropic-ai/sdk": "^0.18.0"
+    "@anthropic-ai/sdk": "^0.18.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
