--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "helmet": "^7.1.0",
     "openai": "^4.24.1",
     "@anthropic-ai/sdk": "^0.18.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "googleapis": "^128.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
