--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "openai": "^4.24.1",
     "@anthropic-ai/sdk": "^0.18.0",
     "multer": "^1.4.5-lts.1",
-    "googleapis": "^128.0.0"
+    "googleapis": "^128.0.0",
+    "puppeteer": "^21.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
