--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "@anthropic-ai/sdk": "^0.18.0",
     "multer": "^1.4.5-lts.1",
     "googleapis": "^128.0.0",
-    "puppeteer": "^21.6.1"
+    "pdfkit": "^0.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
