--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "@anthropic-ai/sdk": "^0.18.0",
     "multer": "^1.4.5-lts.1",
     "googleapis": "^128.0.0",
-    "pdfkit": "^0.15.0"
+    "pdfkit": "^0.15.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
