--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "googleapis": "^128.0.0",
     "pdfkit": "^0.15.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
